[workspace]
resolver = "2"
members = ["crates/flow-ir-core", "crates/mlua-flow-ir"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
repository = "https://github.com/ynishi/mlua-flow-ir"
homepage = "https://github.com/ynishi/mlua-flow-ir"

[profile.release]
overflow-checks = true
