[package]
name = "flow-ir-core"
version = "0.0.1"
description = "flow.ir Pure Rust schema + sync interpreter — Node / Expr / Dispatcher / eval (no mlua, no async)"
documentation = "https://docs.rs/flow-ir-core"
keywords = ["flow", "ir", "interpreter", "dsl", "dispatcher"]
categories = ["data-structures", "parser-implementations"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
