[package]
name = "mlua-flow-ir"
version = "0.1.2"
description = "flow.ir async runtime + mlua binding — re-exports flow-ir-core (Pure Rust sync core) and adds AsyncDispatcher + eval_async + Lua module"
documentation = "https://docs.rs/mlua-flow-ir"
keywords = ["flow", "ir", "mlua", "lua", "async"]
categories = ["data-structures", "asynchronous", "api-bindings"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
flow-ir-core = { path = "../flow-ir-core", version = "0.1.2" }
mlua = { version = "0.11", features = ["serde"], optional = true }
serde_json = "1"
async-trait = "0.1"
async-recursion = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt", "rt-multi-thread", "time"] }

[features]
default = ["lua54", "vendored"]
# Lua version selection (mutually exclusive, enforced by mlua itself)
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
luau = ["mlua/luau"]
# Link a bundled Lua built from source instead of a system Lua
vendored = ["mlua?/vendored"]
